// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`airunway-aks-setup - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Set up AI Runway on AKS — from bare cluster to running model. Covers cluster verification, controller install, GPU assessment, provider setup, and first deployment. WHEN: "setup AI Runway", "onboard AKS cluster", "install AI Runway", "airunway setup", "deploy model to AKS", "GPU inference on AKS", "KAITO setup on AKS", "run LLM on AKS", "vLLM on AKS", "set up model serving on AKS", "AI Runway controller".",
  "extractedKeywords": [
    "ai",
    "airunway",
    "aks",
    "assessment",
    "azure",
    "bare",
    "cli",
    "cluster",
    "controller",
    "covers",
    "deploy",
    "deployment",
    "diagnostic",
    "first",
    "from",
    "inference",
    "install",
    "kaito",
    "kubernetes",
    "mcp",
    "model",
    "onboard",
    "provider",
    "rbac",
    "running",
    "runway",
    "serving",
    "setup",
    "verification",
    "vllm",
    "when",
  ],
  "name": "airunway-aks-setup",
}
`;

exports[`airunway-aks-setup - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "ai",
  "airunway",
  "aks",
  "assessment",
  "azure",
  "bare",
  "cli",
  "cluster",
  "controller",
  "covers",
  "deploy",
  "deployment",
  "diagnostic",
  "first",
  "from",
  "inference",
  "install",
  "kaito",
  "kubernetes",
  "mcp",
  "model",
  "onboard",
  "provider",
  "rbac",
  "running",
  "runway",
  "serving",
  "setup",
  "verification",
  "vllm",
  "when",
]
`;
